--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,9 @@
     <title>Decodificador de texto</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Decodificador de Texto</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
