alterar nome e renomear imagem

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decodificador de texto</title>
+    <title>Decodificador de texto | Projeto de Curso | Alura</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
-        <h1>Decodificador de Texto</h1>
+        <img src="./assets/logo-alura.png" alt="logo da alura">
     </header>
-    <main></main>
+    <main>
+        <p>Digite seu texto</p>
+        <img src="./assets/icone-exclamacao.png" alt="icone redondo de exclamacao">
+        <p>Apenas letras minúsculas e sem acento.</p>
+        <button>Criptografar</button>
+        <button>Descriptografar</button>
+        <img src="./assets/imagen-pagina.png" alt="imagem da pessoa com lupa">
+        <p>Nenhuma mensagem encontrada</p>
+        <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+    </main>
     <footer></footer>
 </body>
 </html>
