--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </section>
         <section class="apresentacao__conteudo-direito">
             <img src="./assets/imagen-pagina.png" alt="figura de uma pessoa segurando uma lupa">
-            <p class="apresentacao__conteudo-direito__texto1">Nenhuma mensagem encontrada</p>
-            <p class="apresentacao__conteudo-direito__texto2">Digite um texto que você deseja criptografar ou descriptografar.</p>
+            <div>
+                <h1 class="apresentacao__conteudo-direito__texto__titulo">Nenhuma mensagem encontrada</h1>
+                <p class="apresentacao__conteudo-direito__texto__paragrafo">Digite um texto que você deseja criptografar ou descriptografar.</p>
+            </div>
         </section>
     </main>
     <footer></footer>
