criar cabecalho e rodape

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="cabecalho">
         <img src="./assets/logo-alura.png" alt="logo da alura">
+        <h1>Decodificador de Texto | Projeto de Curso | Alura</h1>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo-esquerdo">
@@ -25,12 +26,14 @@
         </section>
         <section class="apresentacao__conteudo-direito">
             <img src="./assets/imagen-pagina.png" alt="figura de uma pessoa segurando uma lupa">
-            <div>
-                <h1 class="apresentacao__conteudo-direito__texto__titulo">Nenhuma mensagem encontrada</h1>
+            <div class="apresentacao__conteudo-direito__texto">
+                <h2 class="apresentacao__conteudo-direito__texto__titulo">Nenhuma mensagem encontrada</h2>
                 <p class="apresentacao__conteudo-direito__texto__paragrafo">Digite um texto que você deseja criptografar ou descriptografar.</p>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Alex Laudiano</p>
+    </footer>
 </body>
 </html>
