--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="./assets/logo-alura.png" alt="logo da alura">
-        <h1>Decodificador de Texto | Challenge ONE: Iniciante em Programação</h1>
+        <img class="cabecalho__imagem" src="./assets/logo-alura.png" alt="logo da alura">
+        <h1 class="cabecalho__texto" >Decodificador de Texto | Challenge ONE: Iniciante em Programação</h1>
     </header>
     <main class="container">
         <section class="container__input">
