--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <section class="container__output">
             <div class="container__output__conteudo">
                 <img class="container__output__conteudo__imagem" src="./assets/imagen-pagina.png" alt="Pessoa segurando uma lupa">
-                <h2 class="container__output__conteudo__subtitulo">Nenhuma mensagem encontrada</h2>
-                <p class="container__output__conteudo__paragrafo">Digite um texto que você deseja criptografar ou descriptografar.</p>
+                <div class="container__output__conteudo__texto">
+                    <h2 class="container__output__conteudo__subtitulo">Nenhuma mensagem encontrada</h2>
+                    <p class="container__output__conteudo__paragrafo">Digite um texto que você deseja criptografar ou descriptografar.</p>
+                </div>    
             </div>
             <div class="container__output__dados">
                 <textarea class="container__output__dados__texto" id="resultado" readonly></textarea>
@@ -40,9 +42,9 @@
         </section>
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alex Laudiano</p>
-        <a href="https://www.linkedin.com/in/alex-laudiano">LinkedIn</a>
-        <a href="https://github.com/alex-laudiano">GitHub</a>
+        <p class="rodape__texto">Desenvolvido por Alex Laudiano</p>
+        <a class="rodape__link" href="https://www.linkedin.com/in/alex-laudiano">LinkedIn</a>
+        <a class="rodape__link" href="https://github.com/alex-laudiano">GitHub</a>
     </footer>
 </body>
 </html>
