--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de texto | Projeto de Curso | Alura</title>
-    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -16,10 +15,10 @@
     <main class="container">
         <section class="container__input">
             <div class="container__input__dados">
-                <textarea class="container__input__dados__texto" id="textoEsquerdo" placeholder="Digite sua mensagem"></textarea>
+                <textarea class="container__input__dados__texto" id="textoEsquerdo" placeholder="Digite seu texto"></textarea>
             </div>
             <div class="container__input__observacao">
-                <img src="./assets/warning.png" alt="Ícone de exclamação">
+                <img class="container__input__observacao__imagem" src="./assets/warning.png" alt="Ícone de exclamação">
                 <p class="container__input__observacao__texto">Apenas letras minúsculas e sem acento.</p>
             </div>
             <div class="container__input__botao">
