atualização do footer

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
     </main>
     <footer class="rodape">
         <p class="rodape__texto">Desenvolvido por Alex Laudiano</p>
-        <a class="rodape__link" href="https://www.linkedin.com/in/alex-laudiano">LinkedIn</a>
-        <a class="rodape__link" href="https://github.com/alex-laudiano">GitHub</a>
+        <a class="rodape__link" href="https://www.linkedin.com/in/alex-laudiano">
+            <img src="./assets/logo-linkedin.png" alt="Logo do LinkedIn">
+        </a>
+        <a class="rodape__link" href="https://github.com/alex-laudiano">
+            <img src="./assets/logo-github.png" alt="Logo do GitHub">
+        </a>
     </footer>
 </body>
 </html>
