atualização dos links das redes sociais

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </main>
     <footer class="rodape">
         <p class="rodape__texto">Desenvolvido por Alex Laudiano</p>
-        <a class="rodape__link" href="https://www.linkedin.com/in/alex-laudiano">
+        <a class="rodape__link" href="https://www.linkedin.com/in/laudiano">
             <img src="./assets/logo-linkedin.png" alt="Logo do LinkedIn">
         </a>
-        <a class="rodape__link" href="https://github.com/alex-laudiano">
+        <a class="rodape__link" href="https://github.com/alexlaudiano">
             <img src="./assets/logo-github.png" alt="Logo do GitHub">
         </a>
     </footer>
